--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body class="bg-verde-800 font-sans">
 
-  <div class="container mt-4 flex justify-center md:justify-start">
+  <!-- Temperatura e Dia da Semana -->
+  <div class="container mt-4 flex justify-center">
 
-    <div class="inline-flex items-center bg-verde-900 rounded-md">
+    <div class="inline-flex items-center bg-verde-900 rounded-full">
 
       <span class="size-2 bg-verde-300 rounded-full block relative -left-1"></span>
 
@@ -45,21 +46,70 @@
 
   <main class="container">
 
-    <div class="relative text-white pt-64 px-8 pb-8">
+    <div class="relative text-white bg-gradient-to-t from-verde-950/80 pt-64 px-8 pb-8 rounded-2xl overflow-hidden max-sm:pt-12 max-sm:px-4">
 
       <img class="absolute inset-0 -z-10 size-full object-cover" src="./img/floresta.jpg" alt="">
 
-      <div class="bg-verde-950 inline-flex gap-8 items-center py-1 pr-1 pl-4 mb-8 rounded-full">
-        vagas abertas para dezembro
+      <div class="bg-verde-950/60 flex flex-col gap-2 items-start p-4 rounded-xl sm:gap-8 sm:items-center sm:py-1 sm:pr-1 sm:pl-4 mb-8 sm:bg-verde-950 sm:rounded-full sm:inline-flex sm:flex-row">
+
+        Vagas abertas para dezembro
+
         <a href="" class="bg-verde-400 text-verde-900 py-2 px-6 inline-block rounded-full">Reserve Hoje</a>
       </div>
 
-      <h1 class="font-serif text-5xl max-w-screen-sm text-balance mb-20 ">Venha Experimentar a Vida na Floresta</h1>
+      <h1 class="font-serif text-4xl max-w-screen-sm text-balance mb-8 sm:mb-20 sm:text-5xl">Venha Experimentar a Vida na Floresta</h1>
+
+      <div class="text-sm sm:flex justify-between items-end">
+        <p class="max-sm:mb-6">Melhores locais para visitar <a href="./" class="underline decoration-2 underline-offset-4 hover:no-underline ">2049</a></p>
+
+        <div>
+          <p class="uppercase mb-2">Recomendo por</p>
+
+          <p class="flex items-center gap-4">
+            <img class="w-28" src="./img/parceiros/wildbeast.svg" alt="Wildbeast">
+            <span>|</span>
+            Revista Nacional
+          </p>
+        </div>
+      </div>
 
     </div>
 
   </main>
 
+  <!-- Acomodações -->
+  <section id="acomodacoes" class="container grid lg:grid-cols-[2fr_3fr] gap-8 mb-12 pt-16 sm:mb-16">
+    <div class="content-end bg-[url(./img/padrao.svg)] bg-no-repeat bg-contain bg-left-bottom">
+      <h2 class="text-white text-4xl font-serif mb-8 lg:text-5xl">Refúgio Natural</h2>
+
+      <ul class="text-gray-200 *:flex *:items-center *:gap-4 space-y-4 sm:text-xl">
+        <li class=""><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Experimente a natureza de perto</li>
+        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Conecte-se com a natureza</li>
+        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Desconecte-se do digital</li>
+        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Observe a vida selvagem</li>
+        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Escolha a sua cabine preferida</li>
+      </ul>
+
+    </div>
+
+    <div class="grid grid-cols-[1fr_2fr] gap-4 sm:gap-8">
+      <div class="col-span-full grid *:col-start-1 *:row-start-1">
+        <img class="h-52 w-full object-cover rounded-xl" src="./img/casa1.jpg" alt="Casa 1">
+        <span class="self-start justify-self-end uppercase text-white text-sm/none bg-verde-950/60 rounded-full px-4 py-2 m-2 ">Ruby</span>
+      </div>
+
+      <div class="grid *:col-start-1 *:row-start-1">
+        <img class="size-full object-cover rounded-xl" src="./img/casa2.jpg" alt="Casa 2">
+        <span class="self-start justify-self-end uppercase text-white text-sm/none bg-verde-950/60 rounded-full px-4 py-2 m-2 ">Emerald</span>
+      </div>
+
+      <div class="grid *:col-start-1 *:row-start-1">
+        <img class="size-full object-cover rounded-xl" src="./img/casa3.jpg" alt="Casa 3">
+        <span class="self-start justify-self-end uppercase text-white text-sm/none bg-verde-950/60 rounded-full px-4 py-2 m-2 ">Saphire</span>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 </html>
