correções de links e possível correção de espaçamento

--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
       <p class="max-sm:mt-4">© 2025 Forest. Todos os direitos reservados.</p>
 
       <ul class="flex flex-row justify-around *:max-sm:px-8 *:sm:pl-6 *:hover:text-verde-400 ">
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Youtube</a></li>
-        <li><a href="">Linkedin</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Linkedin</a></li>
       </ul>
 
     </div>
