--- a/index.html
+++ b/index.html
@@ -33,14 +33,28 @@
       <img src="./img/forest.svg" alt="Forest">
     </a>
 
-    <nav>
-      <ul class="text-white text-xl flex flex-wrap gap-8 ">
-        <li><a class="hover:underline hover:underline-offset-8" href="#acomodacoes">Acomodação</a></li>
-        <li><a class="hover:underline hover:underline-offset-8"  href="#eventos">Eventos</a></li>
-        <li><a class="hover:underline hover:underline-offset-8" href="#experiencias">Experiências</a></li>
-        <li><a class="hover:underline hover:underline-offset-8" href="#contato">Contato</a></li>
+    <nav id="nav" class="items-center lg:block hidden z-40 max-lg:fixed max-lg:w-full max-lg:inset-0 ">
+
+      <div class="fixed lg:hidden inset-0 bg-verde-950/40 backdrop-blur-md ">
+
+      </div>
+
+      <ul class="text-white lg:text-xl lg:flex lg:flex-wrap lg:gap-8 max-lg:z-50 max-lg:absolute max-lg:divide-y-2 max-lg:divide-white/10 max-lg:p-8 max-lg:w-full text-2xl"> 
+
+        <li class="animate-slide-in opacity-0 animate-1"><a class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 max-lg:hover:cursor-pointer lg:hover:underline lg:hover:underline-offset-8" href="#acomodacoes">Acomodação</a></li>
+        <li class="animate-slide-in opacity-0 animate-2"><a class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 max-lg:hover:cursor-pointer lg:hover:underline lg:hover:underline-offset-8"  href="#eventos">Eventos</a></li>
+        <li class="animate-slide-in opacity-0 animate-3"><a class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 max-lg:hover:cursor-pointer lg:hover:underline lg:hover:underline-offset-8" href="#experiencias">Experiências</a></li>
+        <li class="animate-slide-in opacity-0 animate-4"><a class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 max-lg:hover:cursor-pointer lg:hover:underline lg:hover:underline-offset-8" href="#contato">Contato</a></li>
       </ul>
     </nav>
+
+    <button id="mobile-btn" class="bg-gradient-to-t from-verde-400 to-verde-200 py-3 px-5 rounded-full text-verde-950 leading-none justify-self-start flex items-center gap-2 lg:hidden hover:cursor-pointer">Menu 
+      <span class="h-3 w-4 flex flex-col justify-between *:h-0.5 *:rounded-md *:bg-verde-800">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+    </button>
 
   </header>
 
@@ -48,8 +62,8 @@
 
     <div class="relative text-white bg-gradient-to-t from-verde-950/80 pt-64 px-8 pb-8 rounded-2xl overflow-hidden max-sm:pt-12 max-sm:px-4">
 
-      <img class="absolute inset-0 -z-10 size-full object-cover" src="./img/floresta.jpg" alt="">
-
+      <video id="video" class="absolute inset-0 -z-10 size-full object-cover animate-fade-in" src="./img/video_chuva.mp4" width="1280" height="720" muted autoplay playsinline loop></video>
+    
       <div class="bg-verde-950/60 flex flex-col gap-2 items-start p-4 rounded-xl sm:gap-8 sm:items-center sm:py-1 sm:pr-1 sm:pl-4 mb-8 sm:bg-verde-950 sm:rounded-full sm:inline-flex sm:flex-row">
 
         Vagas abertas para dezembro
@@ -289,7 +303,7 @@
   </section>
 
   <!-- Contato -->
-  <section class="container mb-12 sm:mb-16 grid gap-12 lg:grid-cols-2">
+  <section id="contato" class="container mb-12 sm:mb-16 grid gap-12 lg:grid-cols-2">
 
     <div class="grid grid-cols-1 max-sm:p-2 items-start">
       <div class="max-sm:mb-8">
@@ -390,6 +404,39 @@
     </div>
 
   </footer>
+
+  <script>
+    const mobileBtn = document.getElementById('mobile-btn');
+    const menu = document.getElementById('nav');
+
+    mobileBtn.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
+      menu.classList.toggle('flex');
+    });
+
+    nav.addEventListener('click', () => {
+      menu.classList.add('hidden');
+      menu.classList.remove('flex');
+    });
+
+    const video = document.getElementById('video');
+    const temper = document.getElementById('temper');
+    const dia = document.getElementById('dia');
+    const clima = document.getElementById('clima');
+
+    const aleatorio = Math.floor(Math.random() * 10) + Math.floor(Math.random() * 20);
+
+    temper.innerText = `${aleatorio}ºC`;
+    clima.innerText = aleatorio < 15 ? `🌧️ ${aleatorio * 3}%` : aleatorio < 20? `🌤️` : `☀️`;
+    
+    const hoje = new Date();
+    dia.innerText = hoje.toLocaleDateString('pt-BR', {
+	    weekday: 'long',
+    });
+
+    video.src = aleatorio < 15 ? `./img/video_chuva.mp4` : `./img/video_sol.mp4`;
+
+  </script>
 
 </body>
 </html>
