--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="inline-flex items-center bg-verde-900 rounded-full">
 
-      <span class="size-2 bg-verde-300 rounded-full block relative -left-1"></span>
+      <span class="neon size-2 block relative -left-1"></span>
 
       <div class="text-verde-300 divide-x-2 divide-verde-800 flex *:px-4 *:py-2">
         <div class="capitalize" id="dia">quarta</div>
@@ -68,7 +68,7 @@
 
         Vagas abertas para dezembro
 
-        <a href="" class="bg-verde-400 text-verde-900 py-2 px-6 inline-block rounded-full">Reserve Hoje</a>
+        <a href="" class="neon text-verde-900 py-2 px-6 inline-block rounded-full">Reserve Hoje</a>
       </div>
 
       <h1 class="font-serif text-4xl max-w-screen-sm text-balance mb-8 sm:mb-20 sm:text-5xl">Venha Experimentar a Vida na Floresta</h1>
@@ -97,11 +97,11 @@
       <h2 class="text-white text-4xl font-serif mb-8 lg:text-5xl">Refúgio Natural</h2>
 
       <ul class="text-gray-200 *:flex *:items-center *:gap-4 space-y-4 sm:text-xl">
-        <li class=""><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Experimente a natureza de perto</li>
-        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Conecte-se com a natureza</li>
-        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Desconecte-se do digital</li>
-        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Observe a vida selvagem</li>
-        <li><span class="bg-verde-400 h-0.5 w-6 inline-block"></span>Escolha a sua cabine preferida</li>
+        <li><span class="neon h-0.5 w-6 inline-block"></span>Experimente a natureza de perto</li>
+        <li><span class="neon h-0.5 w-6 inline-block"></span>Conecte-se com a natureza</li>
+        <li><span class="neon h-0.5 w-6 inline-block"></span>Desconecte-se do digital</li>
+        <li><span class="neon h-0.5 w-6 inline-block"></span>Observe a vida selvagem</li>
+        <li><span class="neon h-0.5 w-6 inline-block"></span>Escolha a sua cabine preferida</li>
       </ul>
 
     </div>
@@ -196,18 +196,18 @@
       <ul class="">
         <li>
           
-          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="bg-verde-400 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Observação Noturna</h3>
+          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Observação Noturna</h3>
           <p class="mb-8 text-balance text-gray-400 pl-10">Explore a vida selvagem em seu habitat natural sob as estrelas.</p>
         </li>
 
 
         <li>
-          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="bg-verde-400 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Vida Selvagem</h3>
+          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Vida Selvagem</h3>
           <p class="mb-8 text-balance text-gray-400 pl-10">Observe a vida selvagem em seu habitat natural.</p>
         </li>
 
         <li>
-          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="bg-verde-400 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Canoagem</h3>
+          <h3 class="text-white text-xl flex items-center gap-4 group"><span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>Canoagem</h3>
           <p class="mb-8 text-balance text-gray-400 pl-10">Conquiste novos horizontes com nossa equipe especializada.</p>
         </li>
       </ul>
@@ -256,7 +256,7 @@
       <div class="flex flex-col gap-4 sm:flex-row sm:gap-8">
 
         <div class="bg-verde-900 flex flex-col flex-1 gap-4 p-6 sm:p-8 rounded-2xl sm:hover:-translate-y-2 sm:transition-transform">
-          <div class="bg-verde-400 size-10 flex items-center justify-center rounded-full">
+          <div class="neon size-10 flex items-center justify-center">
             <img class=" " src="./img/manha.svg" alt="">
           </div>
 
@@ -270,7 +270,7 @@
         </div>
 
         <div class="bg-verde-900 flex flex-col flex-1 gap-4 p-6 sm:p-8 rounded-2xl sm:translate-y-12 sm:transition-transform sm:hover:translate-y-10">
-          <div class="bg-verde-400 size-10 flex items-center justify-center rounded-full">
+          <div class="neon size-10 flex items-center justify-center">
             <img class=" " src="./img/dia.svg" alt="">
           </div>
 
@@ -284,7 +284,7 @@
         </div>
 
         <div class="bg-verde-900 flex flex-col flex-1 gap-4 p-6 sm:p-8 rounded-2xl sm:hover:-translate-y-2 sm:transition-transform">
-          <div class="bg-verde-400 size-10 flex items-center justify-center rounded-full">
+          <div class="neon size-10 flex items-center justify-center">
             <img class=" " src="./img/noite.svg" alt="">
           </div>
 
@@ -313,15 +313,15 @@
       </div>
 
       <div class="grid gap-2">
-        <span class="bg-verde-300 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
+        <span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
         <h3 class="text-2xl text-verde-300">Base</h3>
         <p class="text-gray-200">Rua da Mata, 123 - Jardim Botânico - PB</p>
 
-        <span class="bg-verde-300 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
+        <span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
         <h3 class="text-2xl text-verde-300">E-mail</h3>
         <p class="text-gray-200">contato@forestproject.com</p>
 
-        <span class="bg-verde-300 h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
+        <span class="neon h-0.5 w-6 group-hover:w-10 transition-all inline-block"></span>
         <h3 class="text-2xl text-verde-300">Telefone</h3>
         <p class="text-gray-200">83 3222-2222</p>
       </div>
